crm-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: crm-dev
  labels:
    name: crm-dev
