crm-authuser_rest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-authuser-rest-deployment
  namespace: crm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-auth
  template:
    metadata:
      labels:
        app: go-auth
    spec:
      containers:
      - name: crm-authuser-rest
        image: karthiksgd/crm-auth-user-rest:v1.0.6
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8086

---
apiVersion: v1
kind: Service
metadata:
  name: crm-authuser-rest-service
  namespace: crm-dev
spec:
  type: ClusterIP
  selector:
    app: go-auth
  ports:
  - port: 8086
    targetPort: 8086
