crm-client-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-client-frontend-deployment
  namespace: crm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-frontend
  template:
    metadata:
      labels:
        app: client-frontend
    spec:
      containers:
      - name: client-frontend-gateway
        image: karthiksgd/crm-client-frontend:v1.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: crm-client-frontend-service
  namespace: crm-dev
spec:
  type: ClusterIP
  selector:
    app: client-frontend
  ports:
  - port: 8090
    targetPort: 8080
