crm-db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-backbone-db-deployment
  namespace: crm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: crm-backbone-db
        image: karthiksgd/crm-db:v1.0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: crm-backbone-db-service
  namespace: crm-dev
spec:
  type: ClusterIP
  selector:
    app: postgres-db
  ports:
  - port: 5432
    targetPort: 5432
