crm-lead-postgress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-lead-db-deployment
  namespace: crm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-lead-db
  template:
    metadata:
      labels:
        app: postgres-lead-db
    spec:
      containers:
      - name: crm-lead-db
        image: karthiksgd/crm-lead-postgress:v1.0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: crm-lead-db-service
  namespace: crm-dev
spec:
  type: ClusterIP
  selector:
    app: postgres-lead-db
  ports:
  - port: 5432
    targetPort: 5432
