crm-lead.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-lead-api-deployment
  namespace: crm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lead-api
  template:
    metadata:
      labels:
        app: lead-api
    spec:
      containers:
      - name: crm-lead-api-rest
        image: karthiksgd/crm-lead-node:v1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort:3001

---
apiVersion: v1
kind: Service
metadata:
  name: crm-lead-api-service
  namespace: crm-dev
spec:
  type: ClusterIP
  selector:
    app: lead-api
  ports:
  - port: 3001
    targetPort: 3001
