crm-rest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-backbone-rest-deployment
  namespace: crm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-rest
  template:
    metadata:
      labels:
        app: go-rest
    spec:
      containers:
      - name: crm-backbone-rest
        image: karthiksgd/crm-rest:v1.0.11
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8085

---
apiVersion: v1
kind: Service
metadata:
  name: crm-backbone-rest-service
  namespace: crm-dev
spec:
  type: ClusterIP
  selector:
    app: go-rest
  ports:
  - port: 8085
    targetPort: 8085
