crm-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-crm
  namespace: crm-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - akstech.sg
        - www.akstech.sg
      secretName: akstech-sg
  defaultBackend:
    service:
      name: crm-backbone-nginx-service
      port:
        number: 8080
  rules:
  - host: akstech.sg
  # - host: localhost
    http:
      paths:
      - path: /admin/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-backbone-nginx-service
            port:
              number: 8080
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-client-frontend-service
            port:
              number: 8090
      - path: /admin/api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-backbone-rest-service
            port:
              number: 8085
      - path: /auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-authuser-rest-service
            port:
              number: 8086
      - path: /client/lead/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-lead-api-service
            port:
              number: 3001
  - host: www.akstech.sg
    http:
      paths:
      - path: /admin/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-backbone-nginx-service
            port:
              number: 8080
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-client-frontend-service
            port:
              number: 8090
      - path: /admin/api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-backbone-rest-service
            port:
              number: 8085
      - path: /auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-authuser-rest-service
            port:
              number: 8086
      - path: /client/lead/?(.*)
        pathType: Prefix
        backend:
          service:
            name: crm-lead-api-service
            port:
              number: 3001
